[package]
name = "rust_playground"
version = "0.1.0"
authors = ["ShirakamiEmmmer <emmmer@EmmmerdeMacBook-Pro.local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"